--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,8 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
-      - fromService:
+      - key: REDIS_URL
+        fromService:
           type: redis
           name: cache
           property: connectionString
