--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,10 @@ services:
     env: python
     plan: free
     buildCommand: "./render-build.sh"
-    startCommand: "export PATH=\"${PATH}:/opt/render/project/.render/chrome/opt/google/chrome\"; gunicorn --worker-class gevent --bind 0.0.0.0:$PORT app:app"
+    startCommand: "export PATH=\"${PATH}:/opt/render/project/.render/chrome/opt/google/chrome\"; gunicorn --workers 2 --worker-class gevent --bind 0.0.0.0:$PORT app:app"
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11
+        value: 3.11.9
       - key: REDIS_URL
         fromService:
           type: redis
